--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Every offer has a validity period before the offer expires. As an example, a BOGO offer might be valid for only 5 days. You'll see in the data set that informational offers have a validity period even though these ads are merely providing information about a product; for example, if an informational offer has 7 days of validity, you can assume the customer is <b>feeling the influence of the offer</b>for 7 days after receiving the advertisement.\n",
     "\n",
-    "You'll be given transactional data showing user purchases made on the app including the timestamp of purchase and the amount of money spent on a purchase. This transactional data also has a record for each offer that a user receives as well as a record for when a user actually views the offer. There are also records for when a user completes an offer. \n",
+    "we are given transactional data showing user purchases made on the app including the timestamp of purchase and the amount of money spent on a purchase. This transactional data also has a record for each offer that a user receives as well as a record for when a user actually views the offer. There are also records for when a user completes an offer. \n",
     "\n",
     "Keep in mind as well that someone using the app might make a purchase through the app without having received an offer or seen an offer.\n",
     "\n",
@@ -31,11 +31,12 @@
     "\n",
     "This makes data cleaning especially important and tricky.\n",
     "\n",
-    "You'll also want to take into account that some demographic groups will make purchases even if they don't receive an offer. From a business perspective, if a customer is going to make a 10 dollar purchase without an offer anyway, you wouldn't want to send a buy 10 dollars get 2 dollars off offer. You'll want to try to assess what a certain demographic group will buy when not receiving any offers.\n",
+    "We will also be taking into  account that some demographic groups will make purchases even if they don't receive an offer. From a business perspective, if a customer is going to make a 10 dollar purchase without an offer anyway, you wouldn't want to send a buy 10 dollars get 2 dollars off offer. You'll want to try to assess what a certain demographic group will buy when not receiving any offers.\n",
     "\n",
     "### Final Advice\n",
     "\n",
-    "Because this is a capstone project, you are free to analyze the data any way you see fit. For example, you could build a machine learning model that predicts how much someone will spend based on demographics and offer type. Or you could build a model that predicts whether or not someone will respond to an offer. Or, you don't need to build a machine learning model at all. You could develop a set of heuristics that determine what offer you should send to each customer (i.e., 75 percent of women customers who were 35 years old responded to offer A vs 40 percent from the same demographic to offer B, so send offer A)."
+    "Build a machine learning model that predicts how much someone will spend based on demographics and offer type. --Or build a model that predicts whether or not someone will respond to an offer. Or, you don't need to build a machine learning model at all. 
+    --develop a set of heuristics that determine what offer you should send to each customer (i.e., 75 percent of women customers who were 35 years old responded to offer A vs 40 percent from the same demographic to offer B, so send offer A)."
    ]
   },
   {
@@ -69,18 +70,7 @@
     "* time (int) - time in hours since start of test. The data begins at time t=0\n",
     "* value - (dict of strings) - either an offer id or transaction amount depending on the record\n",
     "\n",
-    "**Note:** If you are using the workspace, you will need to go to the terminal and run the command `conda update pandas` before reading in the files. This is because the version of pandas in the workspace cannot read in the transcript.json file correctly, but the newest version of pandas can. You can access the termnal from the orange icon in the top left of this notebook.  \n",
-    "\n",
-    "You can see how to access the terminal and how the install works using the two images below.  First you need to access the terminal:\n",
-    "\n",
-    "<img src=\"pic1.png\"/>\n",
-    "\n",
-    "Then you will want to run the above command:\n",
-    "\n",
-    "<img src=\"pic2.png\"/>\n",
-    "\n",
-    "Finally, when you enter back into the notebook (use the jupyter icon again), you should be able to run the below cell without any errors."
-   ]
+   ### conda update pandas
   },
   {
    "cell_type": "code",
